swipes service and vector corrections was added
